Add All Discord Users

--- a/config.json.example
+++ b/config.json.example
@@ -3,5 +3,6 @@
   "serverID": "",
   "secret": "",
   "mongoUri": "",
-  "redirect_url": "/api/auth/discord/redirect"
+  "redirect_url": "/api/auth/discord/redirect",
+  "token": ""
 }
