--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "axios": "^0.25.0",
     "connect-mongo": "^4.6.0",
+    "discord-api-types": "^0.26.1",
+    "discord-oauth2": "^2.9.0",
     "discord.js": "^13.6.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
