--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.25.0",
     "connect-mongo": "^4.6.0",
     "discord-api-types": "^0.26.1",
+    "discord-backup": "^3.0.1",
     "discord-oauth2": "^2.9.0",
     "discord.js": "^13.6.0",
     "express": "^4.17.2",
