--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "discord-backup": "^3.0.1",
     "discord-oauth2": "^2.9.0",
     "discord.js": "^13.6.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.6",
